# myfriend

./: .gitignore  .mcp.json  CLAUDE.md
.serena/: project.yml
.serena/memories/: consolidation_worker_analysis.md  mental-model-auto-generation.md  phase1-2-implementation.md  phase3-implementation.md
agentcore/: .env.example  Dockerfile  core.py  local.py  main.py  pyproject.toml
agentcore/memory/: __init__.py  bedrock_client.py  consolidation.py  db.py  directive.py  disposition.py  embedding.py  engine.py  entity.py  extraction.py  freshness.py  graph.py  graph_search.py  mental_model.py  mental_model_trigger.py  recall.py  reflect.py  reranker.py  retain.py  scheduler.py  temporal_search.py  visibility.py
agentcore/test_script/: check_db.py  test_memory.py  test_phase2_verification.py  test_phase3_verification.py  test_rrf_budget.py  test_tools.py
cdk/: .env.example  .prettierrc.mjs  README.md  cdk.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
cdk/lib/: main-stack.ts
cdk/lib/constructs/: agentcore.ts  api-gateway.ts  network.ts  (+1 more)
cdk/parameter/: envname-type.ts  index.ts  validate-dotenv.ts
cdk/test/: aws-cdk-template-dev.test.ts  aws-cdk-template-prd.test.ts  aws-cdk-template-stg.test.ts
front/: .env.example  next.config.js  pnpm-lock.yaml
postgresql/: Dockerfile  docker-compose.yml
postgresql/init/: 001_extensions.sql  002_short_term.sql  003_mid_term.sql  004_long_term.sql
postgresql/jupyter/: matplotlibrc  requirements.txt
postgresql/pgadmin/: servers.json
requester/: package.json  pnpm-lock.yaml  wrangler.jsonc
(+28 files in other folders)
